# denali

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md  TODO  index.html  path.sh  project.vim  upload.sh
ctree/: CMakeLists.txt  ctree.cpp
denali/: CMakeLists.txt  cli.cpp  contour_tree.h  fileio.h  folded.h  graph_iterators.h  graph_maps.h  graph_mixins.h  graph_structures.h  landscape.h  mappable_list.h  rectangular_landscape.cpp  rectangular_landscape.h  simplify.h  visualize.h
denali/concepts/: check.h  common.h  contour_tree.h  graph_attributes.h  graph_iterators.h  graph_maps.h  graph_objects.h  landscape.h
denali/qtgui/: CMakeLists.txt  MainWindow.ui  main.cpp  mainwindow.h
doc/: Doxyfile  index.html  modules.dox  modules.h  pages.dox
doc/api/: Doxyfile
doc/dev/: Doxyfile  DoxygenLayout.xml  modules.dox  pages.dox
doc/md/: index.md  make_html.py  template.html
doc/md/pages/: callback.md  cookbook.md  ctree.md  denali-tutorial.md  examples.md  formats.md  install.md  intro.md  quick_start.md  related.md  tutorial.md
doc/pages/: callback.html  cookbook.html  ctree.html  denali-tutorial.html  examples.html  formats.html  install.html  intro.html  quick_start.html  related.html  tutorial.html
doc/pydoc/: Makefile  conf.py  contour.rst  index.rst  install.rst  io.rst  make.bat  treeobject.rst
doc/pydoc/_build/doctrees/: contour.doctree  environment.pickle  index.doctree  install.doctree  io.doctree  treeobject.doctree
doc/pydoc/_build/html/: .buildinfo  contour.html  genindex.html  index.html  install.html  io.html  objects.inv  search.html  searchindex.js  treeobject.html
doc/pydoc/_build/html/_sources/: index.txt  install.txt  io.txt
doc/resources/: main.css
examples/clustering/: callback.py  callback_client.py  callback_server.py  mnist_017.npy  mnist_017.tree  mnist_017_labels.npy  run_server.sh
examples/comments/: callback.py  comments.pickle  comments.tree  vote_ratio.colors
examples/neural/: all_params.npy  callback.py  callback_client.py  callback_server.py  edges  nnsample.py  targets.npy  topology.pickle  tree.tree  vertices
examples/pdf/: data.npz  edges  info_callback.py  initialize.py  sampling_callback.py  tree.tree  vertices
examples/pdf/.ipynb_checkpoints/: Gaussian Peaks-checkpoint.ipynb
examples/tutorial/: callback.py  data.txt  edges.txt  gendata.py  makenngraph.py  tree.colors  tree.weights  vertices.txt
md/: index.md
md/pages/: callback.md  cookbook.md  examples.md  install.md  intro.md  related.md  tutorial.md
pages/: callback.html  examples.html  install.html  intro.html  tutorial.html
pydenali/: setup.py
pydenali/denali/: __init__.py  contour.py  io.py
pydoc/: conf.py  index.rst
pydoc/_build/doctrees/: contour.doctree  environment.pickle  index.doctree  install.doctree  io.doctree  treeobject.doctree
pydoc/_build/html/: .buildinfo  genindex.html  index.html  io.html  objects.inv  search.html  searchindex.js
pydoc/_build/html/_sources/: index.txt  treeobject.txt
python/: denali.py
python/denali/: __init__.py  contour.py  hierarchical.py  io.py
qtgui/: CMakeLists.txt  CallbacksDialog.ui  ChooseRootDialog.ui  ColorMapDialog.ui  MainWindow.ui  callbacksdialog.cpp  callbacksdialog.h  chooserootdialog.cpp  chooserootdialog.h  colormapdialog.cpp  colormapdialog.h  landscape_context.h  landscape_interactor.cpp  landscape_interface.h  main.cpp  mainwindow.cpp  mainwindow.h
resources/: main.css  tree.dot
tests/: CMakeLists.txt  concepts.cpp  mappable_list_tests.cpp  tests.cpp  wenger_edges  wenger_tree  wenger_vertices
